--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <html>
-<h1> Tasha's Porfolio</h>
-<h2>PRO x Coding Certification</h2>
-<h3>MIT</h3>
-<img src="./Tasha Portfolio Pic.jpg"/>
+    <h1>Tasha's Portfolio</h1>
+    <img src="./Tasha Portfolio Pic.jpg"/>
 </html>
